k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: event-monitor
  labels:
    name: event-monitor
    app: event-monitor
